sf-utah-navigator/force-app/main/default/objects/Resource__c/Resource__c.object-meta.xml
<CustomObject>
    <label>Resource</label>
    <pluralLabel>Resources</pluralLabel>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>Communities__c</fullName>
        <label>Communities</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>Industries__c</fullName>
        <label>Industries</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>Locations__c</fullName>
        <label>Locations</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <label>Topics</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
</CustomObject>