sf-utah-navigator/force-app/main/default/objects/Resource__c/fields/Communities__c.field-meta.xml
<CustomField>
    <fullName>Communities__c</fullName>
    <label>Communities</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>