sf-utah-navigator/force-app/main/default/objects/Resource__c/fields/Industries__c.field-meta.xml
<CustomField>
    <fullName>Industries__c</fullName>
    <label>Industries</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>