sf-utah-navigator/force-app/main/default/objects/Resource__c/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <label>Topics</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>